[feat] backedn fixes
