# docs/swagger.json
@@ -289,12 +289,6 @@
         },
         "send_video.AudioRequest": {
             "type": "object",
-            "required": [
-                "audio_length",
-                "email",
-                "file_link",
-                "languages"
-            ],
             "properties": {
                 "audio_length": {
                     "type": "number",
